--- a/src/Styles/ListDisplay.css
+++ b/src/Styles/ListDisplay.css
@@ -3,6 +3,8 @@
   background-color: #f9f9f9;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .listDisplay h1 {
@@ -48,12 +50,12 @@
   border: none;
   padding: 10px 20px;
   margin-top: 20px;
-  border-radius: 4px;
-  font-size: 15px;
+  border-radius: 7px;
+  font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
   display: block;
-  width: 33%;
+  width: 25%;
 }
 
 .listDisplay button:hover {
