--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,17 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+Link {
+  text-decoration: none;
+}
+
 
 .app {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-image: repeating-linear-gradient(135deg, rgba(189,189,189,0.1) 0px, rgba(189,189,189,0.1) 2px,transparent 2px, transparent 4px),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+
 }
 
 .main-container {
