--- a/src/Styles/TextShowing.css
+++ b/src/Styles/TextShowing.css
@@ -45,6 +45,7 @@
   margin: 10px 5px;
   border-radius: 6px;
   cursor: pointer;
+  text-decoration: none;
   transition: background-color 0.3s ease;
 }
 
